# LearnMilvus

./: .gitignore  README.md  database.py  docker-compose.yml  full_text_search.ipynb  hybrid_search.ipynb  langchain_milvus.ipynb  learn_collections.py  main.py  milvus-standalone-docker-compose.yml  pyproject.toml  quickstart.py  rag.ipynb
