[project]
name = "learnmilvus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "flagembedding>=1.3.5",
    "ipykernel>=7.1.0",
    "peft>=0.18.0",
    "pymilvus[milvus-lite,model]>=2.6.4",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "sniffio>=1.3.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "zhipuai>=2.1.5.20250825",
]
